--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,7 @@
 Verde: #49a09d
 Lilás: #5f2c82 */
 
+/* Configurações gerais */
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
@@ -23,6 +24,7 @@ main {
     width: 100vw;
 }
 
+/* Configurações da tela login */
 section#login {
     position: absolute;
     top: 50%;
@@ -31,7 +33,7 @@ section#login {
     overflow: hidden;
     background-color: white;
     width: 300px;
-    height: 500px;
+    height: 517px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
@@ -39,6 +41,7 @@ section#login {
     transition-timing-function: ease;
 }
 
+/* Configurações da imagem */
 section#login div#imagem {
     display: block;
     background: #5f2c82 url("../imagens/bar.jpg") no-repeat;
@@ -47,6 +50,7 @@ section#login div#imagem {
     height: 200px;
 }
 
+/* Configurações do formulário */
 section#login div#formulario {
     display: block;
     padding: 10px;
@@ -58,5 +62,59 @@ div#formulario h1 {
 }
 
 div#formulario p {
+    font-size: 0.8em;
+}
+
+form div.campo {
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo label {
+    display: none;
+}
+
+form input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: .7s;
+}
+
+form input[type=submit]:hover {
+    background-color: #2d6462;
+}
+
+form a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40%;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    color: #2d6462;
+    border: 1px solid #49a09d;
+    border-radius: 7px;
+    text-decoration: none;
+    transition: .7s;
+}
+
+form a.botao:hover {
+    background-color: #6cd3cf;
+}
+
+form a.botao i {
     font-size: 0.8em;
 }
