--- a/src/css/media-query.css
+++ b/src/css/media-query.css
@@ -6,7 +6,8 @@
     }
 
     section#login {
-        width: 80%;
+        width: 80vw;
+        height: 300px;
     }
 
     section#login div#imagem {
@@ -28,6 +29,7 @@
 
     section#login {
         width: 950px;
+        height: 400px;
     }
 
     section#login div#imagem {
@@ -44,8 +46,9 @@
     div#formulario h1 {
         font-size: 2em;
     }
-    
+
     div#formulario p {
         font-size: 1.2em;
+        margin: 20px 0px;
     }
 }
